form deobfuscated, footer alignment corrected using flexbox

--- a/style/style.css
+++ b/style/style.css
@@ -432,17 +432,29 @@ section:after {
   clear: both; }
 
 footer {
-  height: 100px;
-  max-width: 100%;
+  height: 100%;
+  display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   background-color: #282929;
   color: #888888;
-  /*font-family: sans-serif; */
-  /*font-size: 20px; */ }
-  footer.wrapper {
-    padding: 0; }
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box; }
+  footer .list-container {
+    padding: 20px;
+  }
   footer li, footer a {
-    color: #e7e7e7; }
+    color: #e7e7e7; 
+    display: inline-block; 
+    padding-right: 10px;
+  }
 
+    
 .col {
   width: 33%;
   float: right;
@@ -634,10 +646,12 @@ span.highlight {
 
   .project-img {
     min-height: 250px; }
-
-  footer {
-    padding-bottom: 10px; }
-
+  footer .list-container {
+    padding: 10px;
+  }
+  footer .list-container li {
+    display: block;
+  }
   .col {
     width: 100%;
     font-size: 0.9em;
